# cat-oscilloscope

./: .gitignore  ARCHITECTURE.md  CONSOLIDATION_SUMMARY.md  FREQUENCY_STABILITY_FIX.md  IMPLEMENTATION_NOTES_117.md  IMPLEMENTATION_SUMMARY.md  LIBRARY_USAGE.md  PEAK_MODE_TRACKING_PROPOSAL.md  PR82_CODE_EVIDENCE.md  PR82_EXECUTIVE_SUMMARY.md  PR82_IMPLEMENTATION_ANALYSIS.md  PR82_READING_GUIDE.md  README.ja.md  README.md  REFACTORING_ISSUE_251.md  REFACTORING_SUMMARY.md  RELEASE.md  SIMILARITY_GRAPH_FIX.md  TESTING.md  _config.yml  demo-simple.html  demo-simple.js  example-library-usage.html  index.html  package-lock.json  package.json  test-buffer-source-behavior.html  test-large-canvas.html  test-segment-relative.md  tsconfig.json  tsconfig.lib.json  vite.config.ts
.github/: CHECK_LARGE_FILES.md  check-large-files.toml  copilot-instructions.md
docs/: PHASE_ALIGNMENT.md
generated-docs/: development-status-generated-prompt.md  development-status.md  project-overview-generated-prompt.md  project-overview.md
issue-notes/: 101.md  102.md  105.md  107.md  110.md  115.md  117.md  119.md  120.md  123.md  125.md  127.md  129.md  130.md  132.md  133.md  137.md  138.md  139.md  140.md  145.md  147.md  149.md  151.md  153.md  155.md  158.md  160.md  162.md  163.md  165.md  167.md  169.md  171.md  173.md  175.md  176-analysis.md  177-analysis.md  177.md  179-analysis-v2.md  (+97 more)
src/: AudioManager.ts  (+27 more)
wasm-processor/: Cargo.toml
wasm-processor/src/: bpf.rs  frequency_estimator.rs  gain_controller.rs  lib.rs  phase_detector.rs  waveform_searcher.rs  zero_cross_detector.rs
(+75 files in other folders)
