[package]
name = "wasm-processor"
version = "0.1.0"
edition = "2021"
authors = ["Cat Oscilloscope Contributors"]
description = "WASM implementation of waveform data processing"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Enable link-time optimization for smaller WASM size
lto = true
# Optimize for size
opt-level = "s"
